# gest-ashoex-backend/app/Http/Controllers/CarreraController.php
@@ -14,9 +14,49 @@ use Illuminate\Http\Response;
 class CarreraController extends Controller
 {
 
+/**
+ * @OA\Get(
+ *     path="/api/carreras",
+ *     summary="Obtener todas las Carreras",
+ *     description="Devuelve una lista de todas las Carreras registradas",
+ *     tags={"Carreras"},
+ *     @OA\Response(
+ *         response=200,
+ *         description="Operación exitosa",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="success", type="boolean", example=true),
+ *             @OA\Property(property="data", type="array",
+ *                 @OA\Items(
+ *                     type="object",
+ *                     @OA\Property(property="id", type="integer", example=1),
+ *                     @OA\Property(property="nombre", type="string", example="Ingeniería de Sistemas"),
+ *                     @OA\Property(property="nro_semestres", type="integer", example=8),
+ *                     @OA\Property(property="created_at", type="string", format="date-time", example="2024-10-11T10:23:59Z"),
+ *                     @OA\Property(property="updated_at", type="string", format="date-time", example="2024-10-11T10:23:59Z")
+ *                 )
+ *             ),
+ *             @OA\Property(property="error", type="array", @OA\Items(type="string"), example={} ),
+ *             @OA\Property(property="message", type="string", example="Operación exitosa")
+ *         )
+ *     ),
+ *     @OA\Response(
+ *         response=404,
+ *         description="No se encontraron carreras",
+ *         @OA\JsonContent(
+ *             type="object",
+ *             @OA\Property(property="success", type="boolean", example=false),
+ *             @OA\Property(property="data", type="array", @OA\Items(), example={} ),
+ *             @OA\Property(property="error", type="array", @OA\Items(type="string"), example={"No se encontraron carreras"}),
+ *             @OA\Property(property="message", type="string", example="Operación fallida")
+ *         )
+ *     )
+ * )
+ */
+   
+
     public function index()
     {
-        try {
             $carreras = Carrera::all();
             if ($carreras->isEmpty()) {
                 return response()->json([
@@ -32,28 +72,7 @@ class CarreraController extends Controller
                 'error' => [],
                 'message' => 'Operación exitosa'
             ], Response::HTTP_OK);
-        } catch (\Illuminate\Database\QueryException $e) {
-            return response()->json([
-                'success' => false,
-                'data' => [],
-                'error' => ['Error en la consulta a la base de datos'],
-                'message' => 'Operación fallida'
-            ], Response::HTTP_BAD_REQUEST);
-        } catch (\Illuminate\Auth\Access\AuthorizationException $e) {
-            return response()->json([
-                'success' => false,
-                'data' => [],
-                'error' => ['No tienes permiso para acceder a estas carreras'],
-                'message' => 'Operación fallida'
-            ], Response::HTTP_FORBIDDEN);
-        } catch (\Exception $e) {
-            return response()->json([
-                'success' => false,
-                'data' => [],
-                'error' => ['Ocurrió un error inesperado'],
-                'message' => 'Operación fallida'
-            ], Response::HTTP_INTERNAL_SERVER_ERROR);
-        }
+        
     }
 
     /**
