# gest-ashoex-backend/storage/api-docs/api-docs.json
@@ -7,6 +7,107 @@
     },
     "paths": {
         "/api/carreras": {
+            "get": {
+                "tags": [
+                    "Carreras"
+                ],
+                "summary": "Obtener todas las Carreras",
+                "description": "Devuelve una lista de todas las Carreras registradas",
+                "operationId": "24f82a4261c194f035a7ad6c076d6e61",
+                "responses": {
+                    "200": {
+                        "description": "Operación exitosa",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "nombre": {
+                                                        "type": "string",
+                                                        "example": "Ingeniería de Sistemas"
+                                                    },
+                                                    "nro_semestres": {
+                                                        "type": "integer",
+                                                        "example": 8
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-10-11T10:23:59Z"
+                                                    },
+                                                    "updated_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-10-11T10:23:59Z"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        },
+                                        "error": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string"
+                                            },
+                                            "example": []
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Operación exitosa"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No se encontraron carreras",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {},
+                                            "example": []
+                                        },
+                                        "error": {
+                                            "type": "array",
+                                            "items": {
+                                                "type": "string"
+                                            },
+                                            "example": [
+                                                "No se encontraron carreras"
+                                            ]
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Operación fallida"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "Carreras"
@@ -596,7 +697,7 @@
             },
             "post": {
                 "tags": [
-                    "Curricula"
+                    "Curriculas"
                 ],
                 "summary": "Almacena una nueva Curricula en la base de datos",
                 "operationId": "805f76a007ee525ab3958960be9a7850",
@@ -1710,9 +1811,93 @@
             }
         },
         "/api/materias": {
+            "get": {
+                "tags": [
+                    "Materias"
+                ],
+                "summary": "Obtener todas las Materias",
+                "description": "Devuelve una lista de todas las Materias registradas",
+                "operationId": "918cb2607842cfe87ff9f6796c4cc540",
+                "responses": {
+                    "200": {
+                        "description": "Operación exitosa",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "materias": {
+                                            "type": "array",
+                                            "items": {
+                                                "properties": {
+                                                    "id": {
+                                                        "type": "integer",
+                                                        "example": 1
+                                                    },
+                                                    "codigo": {
+                                                        "type": "integer",
+                                                        "example": 8948440
+                                                    },
+                                                    "nombre": {
+                                                        "type": "string",
+                                                        "example": "Fisica General"
+                                                    },
+                                                    "tipo": {
+                                                        "type": "string",
+                                                        "example": "regular"
+                                                    },
+                                                    "nro_PeriodoAcademico": {
+                                                        "type": "integer",
+                                                        "example": 2
+                                                    },
+                                                    "created_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-10-11T10:23:59Z"
+                                                    },
+                                                    "updated_at": {
+                                                        "type": "string",
+                                                        "format": "date-time",
+                                                        "example": "2024-10-11T10:23:59Z"
+                                                    }
+                                                },
+                                                "type": "object"
+                                            }
+                                        },
+                                        "code": {
+                                            "type": "integer",
+                                            "example": 200
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "No hay materias registradas",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "No hay materias registradas"
+                                        },
+                                        "code": {
+                                            "type": "integer",
+                                            "example": 404
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
-                    "Materia"
+                    "Materias"
                 ],
                 "summary": "Crea una nueva materia",
                 "description": "Este endpoint permite crear una nueva materia en el sistema.",
@@ -1859,7 +2044,7 @@
         "/api/materias/{id}": {
             "get": {
                 "tags": [
-                    "Materia"
+                    "Materias"
                 ],
                 "summary": "Obtiene los detalles de una materia por su ID",
                 "operationId": "808b887ba424ec0048dbd9a11aa22ffe",
@@ -1990,6 +2175,9 @@
                 }
             },
             "delete": {
+                "tags": [
+                    "Materias"
+                ],
                 "summary": "Eliminar una materia",
                 "description": "Elimina una materia específica por su ID.",
                 "operationId": "aa3b33b4b37a772aa16e47d56f319567",
@@ -2126,6 +2314,9 @@
         },
         "/api/materiasUpdate/{id}": {
             "put": {
+                "tags": [
+                    "Materias"
+                ],
                 "summary": "Actualizar una materia",
                 "description": "Actualiza los datos de una materia específica.",
                 "operationId": "b7e5d4c02aaf0cf2b5aa0ca66f0cd6d8",
@@ -2290,10 +2481,6 @@
             "description": "Curriculas"
         },
         {
-            "name": "Curricula",
-            "description": "Curricula"
-        },
-        {
             "name": "Grupos",
             "description": "Grupos"
         },
@@ -2302,8 +2489,8 @@
             "description": "Health Check"
         },
         {
-            "name": "Materia",
-            "description": "Materia"
+            "name": "Materias",
+            "description": "Materias"
         }
     ]
 }
